[gd_scene load_steps=7 format=3 uid="uid://cgva82va80hav"]

[ext_resource type="PackedScene" uid="uid://b7i5brk8wrb0u" path="res://ui/stage3UI.tscn" id="1_1hwes"]
[ext_resource type="Script" uid="uid://dx6asmnwghj2a" path="res://stages/stage_3.gd" id="1_8iyqq"]
[ext_resource type="PackedScene" uid="uid://b7a7kdiy2ua2k" path="res://prefabs/player.tscn" id="2_8iyqq"]
[ext_resource type="Texture2D" uid="uid://bu640p5gvgcxa" path="res://images/bananaBank.png" id="4_8iyqq"]
[ext_resource type="AudioStream" uid="uid://cprvy3fomjyp7" path="res://music/bananaField.mp3" id="5_8iyqq"]
[ext_resource type="AudioStream" uid="uid://bspcjg0qvdoty" path="res://music/DirtyMonkeyBusiness.mp3" id="6_8iyqq"]

[node name="stage3" type="Node2D"]
script = ExtResource("1_8iyqq")

[node name="player" parent="." instance=ExtResource("2_8iyqq")]
top_level = true
position = Vector2(-159, 303)

[node name="Camera2D" type="Camera2D" parent="."]
ignore_rotation = false

[node name="elmoSpawnRate" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="gigaSpawnRate" type="Timer" parent="."]
wait_time = 1.1
autostart = true

[node name="sideToSide" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Unnamed" type="Sprite2D" parent="."]
modulate = Color(0.74558, 0.74558, 0.74558, 1)
z_index = -1000
position = Vector2(-2.99991, -2.00002)
scale = Vector2(2.00208, 2)
texture = ExtResource("4_8iyqq")

[node name="LoopingSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8iyqq")
volume_db = -1.0
autoplay = true

[node name="WhenBossSpawn" type="Timer" parent="."]
wait_time = 90.0
one_shot = true

[node name="BarryToes" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_8iyqq")

[node name="UI" parent="." instance=ExtResource("1_1hwes")]
offset_left = -971.0
offset_top = -542.0
offset_right = -971.0
offset_bottom = -542.0

[connection signal="timeout" from="elmoSpawnRate" to="." method="_on_elmo_spawn_rate_timeout"]
[connection signal="timeout" from="gigaSpawnRate" to="." method="_on_giga_spawn_rate_timeout"]
[connection signal="timeout" from="sideToSide" to="." method="_on_side_to_side_timeout"]
[connection signal="timeout" from="WhenBossSpawn" to="." method="_on_when_boss_spawn_timeout"]
[connection signal="startTheBossMusic" from="UI" to="." method="_on_ui_start_the_boss_music"]
